--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "dotenv": "^8.2.0",
         "emailjs-com": "^2.6.3",
         "formik": "^2.1.5",
         "react": "^16.13.1",
@@ -17,9 +18,9 @@
         "yup": "^0.29.2"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "env-cmd -f env/.env.development react-scripts start",
+        "build": "env-cmd -f env/.env.production react-scripts build",
+        "test": "env-cmd -f env/.env.development creact-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
