--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env.development
-.env.production
+env/.env.development
+env/.env.production
 
 npm-debug.log*
 yarn-debug.log*
